--- a/page.html
+++ b/page.html
@@ -6,44 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shub5g</title>
     <link rel="stylesheet" href="page.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <header>
-    <a href="#" class="logo">Shub5g</a>
+    <a href="#" class="logo"><img src="logo.png" alt="logo on update" class="logo_main"></a>
         <ul class="navbar">
-            <li><a href="#home" class="nav_a">Home</a></li>
-            <li><a href="#about" class="nav_a">About Me</a></li>
-            <li><a href="#services" class="nav_a">Services</a></li>
-            <li><a href="#portfolio" class="nav_a">My portfolio</a></li>
-            <li><a href="#contact" class="nav_a">Contact</a></li>
+            <li class="nav"><a href="#home" class="nav_a">Home</a></li>
+            <li class="nav"><a href="#about" class="nav_a">About Me</a></li>
+            <li class="nav"><a href="#services" class="nav_a">Services</a></li>
+            <li class="nav"><a href="#portfolio" class="nav_a">My portfolio</a></li>
+            <li class="nav"><a href="#contact" class="nav_a">Contact</a></li>
         </ul>
+    <div class="bars"><i class="fa fa-bars"></i></div>
 </header>
-<section class="home" id="home">
+<section class="section_page home" id="home">
     <div class="home-text">
     <h4 class="hello">Hello</h4>
-    <h1 class="name">I'M Shubham <br>Mau<aside class="name-color">rya</aside></h1>
+    <h1 class="name">I'M Shubham <br>Mau<span class="name_color">rya</span></h1>
     <h3 class="hello-front">Front-End-Developer</h3>
     <a class="btn" href="#">Hire Me</a>
     </div>
 </section>
 
-<section class="section-page" id="about">
+<section class="section_page about" id="about">
     <div class="about-us">
-        <h1 class="about-me">About Me</h1>
+        <h1 class="name about-me">About Me</h1>
         <h4 class="hello">Hi, Im Here To Help Your Next Project</h4>
         <p class="myself">Hey, this is my homepage, so I have to say something about myself. Sometimes it is hard to introduce yourself because you know yourself so well that you do </p>
         <ol class="talent">
-            <li>Problem Solving</li>
-            <li>Creative Idea</li>
-            <li>Search A Lot</li>
-            <li>High Quality</li>
+            <li class="feature">Problem Solving</li>
+            <li class="feature">Creative Idea</li>
+            <li class="feature">Search A Lot</li>
+            <li class="feature">High Quality</li>
         </ol>
         <a href="#" class="btn">Contact Me</a>
     </div>
 </section>
-<section id="services" class="section-page">
+<section id="services" class="section_page service">
     <div class="service">
-        <h1 class="about-me">My Services</h1>
+        <h1 class="name service">My Services</h1>
         <h4 class="hello">Better Design, Better Expericences</h4>
         <div class="main-design-block">
             <div class="design">
@@ -60,8 +62,9 @@
             </div>
         </div>
     </div>
+    
 </section>
-<section class="section-page" id="portfolio">
+<section class="section_page portfolioi" id="portfolio">
         <div class="card">
             <div class="card_img">
                 <img src="shoe_image.png" class="card_image">
