--- a/page.html
+++ b/page.html
@@ -14,13 +14,13 @@
         <ul class="navbar">
             <li class="nav"><a href="#home" class="nav_a">Home</a></li>
             <li class="nav"><a href="#about" class="nav_a">About Me</a></li>
-            <li class="nav"><a href="#services" class="nav_a">Services</a></li>
+            <li class="nav"><a href="#service" class="nav_a">Services</a></li>
             <li class="nav"><a href="#portfolio" class="nav_a">My portfolio</a></li>
             <li class="nav"><a href="#contact" class="nav_a">Contact</a></li>
         </ul>
     <div class="bars"><i class="fa fa-bars"></i></div>
 </header>
-<section class="section_page home" id="home">
+<section class="home" id="home">
     <div class="home-text">
     <h4 class="hello">Hello</h4>
     <h1 class="name">I'M Shubham <br>Mau<span class="name_color">rya</span></h1>
@@ -29,7 +29,7 @@
     </div>
 </section>
 
-<section class="section_page about" id="about">
+<section class="about" id="about">
     <div class="about-us">
         <h1 class="name about-me">About Me</h1>
         <h4 class="hello">Hi, Im Here To Help Your Next Project</h4>
@@ -43,9 +43,9 @@
         <a href="#" class="btn">Contact Me</a>
     </div>
 </section>
-<section id="services" class="section_page service">
-    <div class="service">
-        <h1 class="name service">My Services</h1>
+<section id="service" class="service">
+    <div class="block_service">
+        <h1 class="name serve">My Services</h1>
         <h4 class="hello">Better Design, Better Expericences</h4>
         <div class="main-design-block">
             <div class="design">
@@ -64,7 +64,7 @@
     </div>
     
 </section>
-<section class="section_page portfolioi" id="portfolio">
+<section class="portfolioi" id="portfolio">
         <div class="card">
             <div class="card_img">
                 <img src="shoe_image.png" class="card_image">
