--- a/page.html
+++ b/page.html
@@ -16,7 +16,7 @@
             <li class="nav"><a href="#about" class="nav_a">About Me</a></li>
             <li class="nav"><a href="#service" class="nav_a">Services</a></li>
             <li class="nav"><a href="#portfolio" class="nav_a">My portfolio</a></li>
-            <li class="nav"><a href="#contact" class="nav_a">Contact</a></li>
+            <li class="nav"><a href="#experiment" class="nav_a">Contact</a></li>
         </ul>
     <div class="bars"><i class="fa fa-bars"></i></div>
 </header>
@@ -95,6 +95,9 @@
             <button class="card_btn"><a href="#">Buy Now</a></button>
         </div>
     </div>
+</section>
+<section class="experiment" id="experiment">
+
 </section>
     <script src="page.js"></script>
 </body>
